plugins {
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

ext {
    springCloudVersion = "2025.0.0"
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'io.netty:netty-resolver-dns-native-macos:4.2.3.Final'
    implementation("io.netty:netty-handler:4.2.3.Final")
    implementation "io.netty:netty-common"
    implementation "org.xmlunit:xmlunit-core:2.10.0"
    implementation "org.springframework:spring-webflux:6.2.9"
    implementation "org.springframework:spring-webmvc:6.2.9"
    implementation "org.springframework:spring-context:6.2.9"
    implementation "org.apache.tomcat.embed:tomcat-embed-core"

    implementation 'com.azure:azure-identity:1.16.3'
    implementation 'com.microsoft.graph:microsoft-graph:6.47.0'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'

    implementation 'org.springframework.kafka:spring-kafka'
    // TODO: Upgrade with reference to new version when migrating to Spring boot 3 [FKS-214]
    implementation 'no.fintlabs:fint-kafka:5.0.0-rc-2'
    //implementation 'no.fintlabs:fint-kafka:3.2.0-rc-1'
    implementation 'no.fintlabs:fint-flyt-cache:1.0.0'
    implementation 'org.ehcache:ehcache:3.10.6'
    implementation 'net.sf.ehcache:ehcache:2.10.9.2'

    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.springframework.cloud:spring-cloud-function-context'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    compileOnly 'org.projectlombok:lombok:1.18.34'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.3.3'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.3'
    testImplementation 'org.projectlombok:lombok:1.18.34'
}

test {
    maxHeapSize = "20G"
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
    }
}
